--- a/io/io/io.csproj
+++ b/io/io/io.csproj
@@ -573,6 +573,7 @@
     <Content Include="public\admin.html" />
     <Content Include="public\config.txt" />
     <Content Include="public\login.html" />
+    <Content Include="test\compile.html" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
