--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 /io/.vs
+/io/io/bin/io.pdb
+/io/io/bin/io.dll.config
+/io/io/bin/ClearScript.xml
+/io/io/bin/Newtonsoft.Json.xml
+/io/io/obj
+/io/packages
