--- a/io/io/Web.config
+++ b/io/io/Web.config
@@ -1,16 +1,15 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=169433
-  -->
-
+<?xml version="1.0"?>
 <configuration>
-    <system.web>
-      <compilation debug="true" targetFramework="4.0" />
-    </system.web>
-    <system.webServer>
-        <directoryBrowse enabled="true" />
-    </system.webServer>
-
+  <system.web>
+    <pages controlRenderingCompatibilityVersion="4.0"/>
+    <compilation debug="true" targetFramework="4.5.2">
+      <assemblies>
+        <remove assembly="ClearScriptV8-64" />
+        <remove assembly="ClearScriptV8-32" />
+      </assemblies>
+    </compilation>
+  </system.web>
+  <system.webServer>
+    <directoryBrowse enabled="true"/>
+  </system.webServer>
 </configuration>
