--- a/io/io/io.csproj
+++ b/io/io/io.csproj
@@ -584,6 +584,7 @@
     <Content Include="public\admin.html" />
     <Content Include="public\config.txt" />
     <Content Include="public\login.html" />
+    <Content Include="public\vue.min.js" />
     <Content Include="test\compile.html" />
     <Content Include="Web.config" />
   </ItemGroup>
