--- a/io/io/Web.config
+++ b/io/io/Web.config
@@ -10,6 +10,6 @@
     </compilation>
   </system.web>
   <system.webServer>
-    <directoryBrowse enabled="true"/>
+    <directoryBrowse enabled="false"/>
   </system.webServer>
 </configuration>
