--- a/io/io/io.csproj
+++ b/io/io/io.csproj
@@ -72,6 +72,11 @@
     <Content Include="data\site\1.json" />
     <Content Include="data\user\thinh.json" />
     <Content Include="favicon.ico" />
+    <Content Include="io\kit\user\1\method.js" />
+    <Content Include="io\kit\user\1\data.js" />
+    <Content Include="io\kit\user\1\ready.js" />
+    <None Include="io\kit\user\1\setting.json" />
+    <Content Include="io\kit\user\1\temp.htm" />
     <Content Include="io\site\404.htm" />
     <Content Include="io\site\404.bootstrap-452.htm" />
     <Content Include="io\site\admin.bootstrap-452.htm" />
