web build for home page

--- a/io/io/io.csproj
+++ b/io/io/io.csproj
@@ -690,9 +690,62 @@
     <Content Include="io\theme\dashkit-151\libs\select2\dist\js\select2.min.js" />
     <Content Include="io\site\login.dashkit-151.htm" />
     <Content Include="io\site\admin.dashkit-151.htm" />
-    <Content Include="io\ui\user\1\bootstrap-452.htm" />
-    <Content Include="io\ui\user\1\method.js" />
-    <Content Include="io\ui\user\1\style.css" />
+    <Content Include="io\ui\form\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\1\form_1.css" />
+    <Content Include="io\ui\form\2\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\2\form_2.css" />
+    <Content Include="io\ui\form\3\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\3\form_3.css" />
+    <Content Include="io\ui\form\4\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\4\form_4.css" />
+    <Content Include="io\ui\form\5\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\5\form_5.css" />
+    <Content Include="io\ui\form\6\bootstrap-500--1.htm" />
+    <Content Include="io\ui\form\6\form_6.css" />
+    <Content Include="io\ui\poster\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\1\poster_1.css" />
+    <Content Include="io\ui\poster\2\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\2\poster_2.css" />
+    <Content Include="io\ui\poster\3\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\3\poster_3.css" />
+    <Content Include="io\ui\poster\4\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\4\poster_4.css" />
+    <Content Include="io\ui\poster\5\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\5\poster_5.css" />
+    <Content Include="io\ui\poster\6\bootstrap-500--1.htm" />
+    <Content Include="io\ui\poster\6\poster_6.css" />
+    <Content Include="io\ui\header\1\bootstrap-500--2.htm" />
+    <Content Include="io\ui\header\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\header\1\header_1.css" />
+    <Content Include="io\ui\footer\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\1\footer_1.css" />
+    <Content Include="io\ui\footer\2\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\2\footer_2.css" />
+    <Content Include="io\ui\footer\3\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\3\footer_3.css" />
+    <Content Include="io\ui\footer\4\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\4\footer_4.css" />
+    <Content Include="io\ui\footer\5\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\5\footer_5.css" />
+    <Content Include="io\ui\footer\6\bootstrap-500--1.htm" />
+    <Content Include="io\ui\footer\6\footer_6.css" />
+    <Content Include="io\ui\listview\3\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\3\listview_3.css" />
+    <Content Include="io\ui\listview\4\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\4\listview_4.css" />
+    <Content Include="io\ui\listview\5\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\5\listview_5.css" />
+    <Content Include="io\ui\listview\6\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\6\listview_6.css" />
+    <Content Include="io\ui\listview\2\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\2\listview_2.css" />
+    <Content Include="io\ui\listview\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\listview\1\listview_1.css" />
+    <Content Include="io\ui\slide\1\bootstrap-500--1.htm" />
+    <Content Include="io\ui\slide\1\slide_1.css" />
+    <Content Include="io\ui\user\1\bootstrap-452--1.htm" />
+    <Content Include="io\ui\user\1\user_1.js" />
+    <Content Include="io\ui\user\1\user_1.css" />
     <Content Include="public\1\404.html" />
     <Content Include="public\1\collapse.html" />
     <Content Include="public\1\index.html" />
