--- a/io/io/Web.config
+++ b/io/io/Web.config
@@ -18,6 +18,7 @@
       <remove name="TRACEVerbHandler"/>
       <add name="JavaScript" path="*.js" verb="GET,HEAD" type="System.Web.StaticFileHandler" />
       <add name="CSS" path="*.css" verb="GET,HEAD" type="System.Web.StaticFileHandler" />
+      <add name="JSON" path="*.json" verb="GET,HEAD" type="System.Web.StaticFileHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0"/>
       <!--<add name="ApiURIs-ISAPI-Integrated-4.0" path="*/scripts/*.js" verb="GET" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />-->
     </handlers>
