--- a/io/io/io.csproj
+++ b/io/io/io.csproj
@@ -79,8 +79,10 @@
     <Content Include="io\am\user\1\ready.js" />
     <None Include="io\am\user\1\setting.json" />
     <Content Include="io\am\user\1\bootstrap-452.htm" />
+    <Content Include="io\jquery.min.js" />
     <Content Include="io\site\404.bootstrap-500.htm" />
     <Content Include="io\site\admin.bootstrap-500.htm" />
+    <Content Include="io\site\index.bootstrap-500 - Copy.htm" />
     <Content Include="io\site\index.bootstrap-500.htm" />
     <Content Include="io\site\login.bootstrap-500.htm" />
     <Content Include="io\theme\bootstrap-500\dist\css\bootstrap-grid.css" />
@@ -153,6 +155,8 @@
     <Content Include="io\theme\bootstrap-500\example\sticky-footer-navbar\sticky-footer-navbar.css" />
     <Content Include="io\theme\bootstrap-500\example\sticky-footer\index.html" />
     <Content Include="io\theme\bootstrap-500\example\sticky-footer\sticky-footer.css" />
+    <Content Include="io\ui.sdk.css" />
+    <Content Include="io\ui.sdk.htm" />
     <Content Include="io\ui.sdk.js" />
     <Content Include="io\site\404.htm" />
     <Content Include="io\site\404.bootstrap-452.htm" />
@@ -263,6 +267,9 @@
     <Content Include="io\theme\bootstrap-500\example\assets\dist\js\bootstrap.esm.min.js.map" />
     <Content Include="io\theme\bootstrap-500\example\assets\dist\js\bootstrap.js.map" />
     <Content Include="io\theme\bootstrap-500\example\assets\dist\js\bootstrap.min.js.map" />
+    <Content Include="io\ui\header\1\header_1.json" />
+    <Content Include="io\ui\poster\1\poster_1.js" />
+    <Content Include="io\ui\poster\1\poster_1.json" />
     <None Include="packages.config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -705,16 +712,6 @@
     <Content Include="io\ui\poster\1\bootstrap-500--2.htm" />
     <Content Include="io\ui\poster\1\bootstrap-500--1.htm" />
     <Content Include="io\ui\poster\1\poster_1.css" />
-    <Content Include="io\ui\poster\2\bootstrap-500--1.htm" />
-    <Content Include="io\ui\poster\2\poster_2.css" />
-    <Content Include="io\ui\poster\3\bootstrap-500--1.htm" />
-    <Content Include="io\ui\poster\3\poster_3.css" />
-    <Content Include="io\ui\poster\4\bootstrap-500--1.htm" />
-    <Content Include="io\ui\poster\4\poster_4.css" />
-    <Content Include="io\ui\poster\5\bootstrap-500--1.htm" />
-    <Content Include="io\ui\poster\5\poster_5.css" />
-    <Content Include="io\ui\poster\6\bootstrap-500--1.htm" />
-    <Content Include="io\ui\poster\6\poster_6.css" />
     <Content Include="io\ui\header\1\bootstrap-500--2.htm" />
     <Content Include="io\ui\header\1\bootstrap-500--1.htm" />
     <Content Include="io\ui\header\1\header_1.css" />
@@ -737,20 +734,17 @@
     <Content Include="io\ui\user\1\bootstrap-452--1.htm" />
     <Content Include="io\ui\user\1\user_1.js" />
     <Content Include="io\ui\user\1\user_1.css" />
-    <Content Include="public\1\404.html" />
-    <Content Include="public\1\collapse.html" />
-    <Content Include="public\1\index.html" />
-    <Content Include="public\1\order-checkout.html" />
-    <Content Include="public\1\test.html" />
+    <None Include="public\1\poster_1--bootstrap-500.json" />
+    <Content Include="public\1\header_1--bootstrap-500--4.htm" />
+    <Content Include="public\1\poster_1--bootstrap-500--2.htm" />
+    <Content Include="public\1\poster_1--bootstrap-500--1.htm" />
     <Content Include="public\lodash.min.js" />
     <Content Include="public\vue.esm.js" />
     <Content Include="public\vue.esm.min.js" />
     <Content Include="public\vue.min.js" />
     <Content Include="test\compile-1.html" />
     <Content Include="test\tree.html" />
-    <Content Include="public\1\admin.html" />
     <None Include="io\config.json" />
-    <Content Include="public\1\login.html" />
     <Content Include="io\vue.min.js" />
     <Content Include="test\compile-2.html" />
     <Content Include="Web.config" />
